--- a/public/game.html
+++ b/public/game.html
@@ -83,8 +83,7 @@
     </div>
 
     <canvas id="gameCanvas"></canvas>
-    
-    <script src="https://barnyard-game.onrender.com/socket.io/socket.io.js"></script> 
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
         // CHANGE THIS URL IF DEPLOYED
         const SERVER_URL = "https://barnyard-game.onrender.com"; 
@@ -259,4 +258,5 @@
         }
     </script>
 </body>
+
 </html>
